kubernetes/prod-examples/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: app
status:
  loadBalancer: {}
